--- a/CSS/all.css
+++ b/CSS/all.css
@@ -475,6 +475,10 @@ input[type="number"]::-webkit-outer-spin-button {
     grid-template-rows: repeat(5, minmax(30px, auto));
 }
 
+.t-11 {
+    grid-template-rows: repeat(11, minmax(30px, auto));
+}
+
 .t-3>*:nth-child(3n+1) {
     grid-row: 1/2;
 }
@@ -655,6 +659,10 @@ input[type="number"]::-webkit-outer-spin-button {
     padding: 10px;
 }
 
+.current-chart {
+    background-color: var(--hover-main);
+}
+
 .chart-type:hover {
     background-color: var(--hover-main);
 }
@@ -677,6 +685,7 @@ input[type="number"]::-webkit-outer-spin-button {
     border: 1px solid var(--border-ss-gray);
     border-radius: var(--border-radius-main);
     padding: 5px;
+    pointer-events: none;
 }
 
 .data-selection {
@@ -888,9 +897,6 @@ object {
 }
 
 input[type="checkbox"] {
-    -webkit-appearance: unset;
-    -moz-appearance: unset;
-    appearance: unset;
     margin: 0;
     height: 15px;
     width: 15px;
@@ -899,7 +905,7 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked {
-    background-color: gray;
+    /* background-color: gray; */
 }
 
 
