--- a/CSS/all.css
+++ b/CSS/all.css
@@ -71,11 +71,13 @@ body {
 
 .settings-button {
     border-radius: var(--border-radius-main);
+
 }
 
 .user-settings {
     cursor: pointer;
     padding: 10px 10px;
+    color: var(--fg-main);
     border-radius: var(--border-radius-main);
 }
 
@@ -123,7 +125,7 @@ body {
 
 .inline {
     flex-basis: 40%;
-    margin-right: 0;
+    margin: 0;
 }
 
 .input-icons>i {
@@ -159,12 +161,12 @@ body {
     /* box-shadow: 0 0 5px var(--color-main); */
 }
 
-.input-icons:hover .search-bar {
+.search-bar:hover {
     border: 1px solid var(--color-main);
     /* box-shadow: 0 0 5px var(--color-main); */
 }
 
-.input-icons:hover>.icon {
+.search-bar:hover~.icon {
     color: var(--color-main);
 }
 
@@ -217,6 +219,8 @@ body {
     font-size: var(--font-size-main);
     position: absolute;
     right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
     border-radius: 5px;
     z-index: 99;
     padding: 5px;
@@ -241,6 +245,7 @@ body {
     padding: 70px 40px;
     /* border: 1px solid var(--border-ss-gray); */
     border-radius: var(--border-radius-main);
+    width: 400px;
 }
 
 .form .btn {
@@ -275,7 +280,7 @@ body {
     background-color: var(--bg-main);
     padding: 4px 10px;
     min-width: 300px;
-    max-width: 350px;
+    max-width: 320px;
     width: 100%;
     outline-color: var(--color-main);
 }
@@ -403,6 +408,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .page-container {
     width: 60%;
     min-width: 700px;
+    background-color: white;
     gap: 5px;
     border: 1px solid #6f6f6f;
     padding: 20px;
@@ -665,11 +671,14 @@ input[type="number"]::-webkit-outer-spin-button {
 /* #endregion */
 
 .error-message {
-    color: red;
-    font-size: 14px;
-    display: none;
-    position: absolute;
-    bottom: 5px;
+    background-color: #f2dede;
+    color: #a94442;
+    font-size: 16px;
+}
+
+.error-message>button:hover {
+    background-color: #e3b2b2;
+    border-radius: var(--border-radius-main);
 }
 
 /* #region abstractions */
@@ -693,17 +702,18 @@ input[type="number"]::-webkit-outer-spin-button {
     justify-content: center;
 }
 
-.wrap {
-    flex-wrap: wrap;
-}
-
-.flex-j-fs {
+.flex-j-s {
     justify-content: flex-start;
 }
 
 .flex-j-sb {
     justify-content: space-between;
 }
+
+.wrap {
+    flex-wrap: wrap;
+}
+
 
 .flex-center {
     display: flex;
@@ -839,12 +849,28 @@ input[type="number"]::-webkit-outer-spin-button {
     margin-left: 20px;
 }
 
+.pd-5 {
+    padding: 5px;
+}
+
 .pd-10 {
     padding: 10px;
 }
 
+.pd-15 {
+    padding: 15px;
+}
+
 .pd-20 {
     padding: 20px;
+}
+
+.pd-30 {
+    padding: 30px;
+}
+
+.br-5 {
+    border-radius: 5px;
 }
 
 /* #endregion */
@@ -883,16 +909,12 @@ input[type="submit"] {
     border: unset;
 }
 
-/* input[type="date"] {
-    border: unset;
-} */
-
 input {
     background-color: unset;
     border: unset;
     outline-width: 0;
-    height: 40px;
-    max-width: 250px;
+    height: 50px;
+    max-width: 320px;
     min-width: 0;
 }
 
@@ -937,21 +959,19 @@ input[type="checkbox"] {
     border-radius: 0;
 }
 
-input[type="checkbox"]:checked {
-    /* background-color: gray; */
-}
 
 /* #endregion */
+
+
+.table-element {
+    height: 100%;
+}
 
 .input_box {
     position: relative;
     height: 50px;
     min-width: 300px;
     z-index: 10;
-}
-
-.table-element {
-    height: 100%;
 }
 
 .input_box input {
@@ -982,7 +1002,6 @@ input[type="checkbox"]:checked {
     padding: 0 10px;
     color: #808388;
     z-index: 0;
-    /* cursor: text; */
     background-color: var(--bg-main);
     transition: top 200ms ease-in,
         left 200ms ease-in;
@@ -1000,12 +1019,6 @@ input[type="checkbox"]:checked {
 
 .input:not(:placeholder-shown).input:not(:focus)~.label {
     color: var(--fg-main);
-}
-
-#dateInput::-webkit-datetime-edit,
-#dateInput::-webkit-inner-spin-button,
-#dateInput::-webkit-clear-button {
-    display: none;
 }
 
 
