--- a/CSS/all.css
+++ b/CSS/all.css
@@ -105,13 +105,12 @@ body {
     display: none;
     position: absolute;
     font-size: var(--font-size-mini);
-    background-color: var(--bg-main);
+    background-color: white;
     width: 200px;
     padding: 5px;
     border: 1px solid var(--border-s-gray);
     border-radius: var(--border-radius-main);
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
-    /* bottom: -20px; */
     top: 100%;
     right: 20px;
 }
@@ -248,15 +247,15 @@ body {
 
 .form {
     padding: 70px 40px;
-    /* border: 1px solid var(--border-ss-gray); */
     border-radius: var(--border-radius-main);
     width: 400px;
 }
 
-.form .btn {
-    width: 100%;
+.form {
+    .btn {
+        width: 100%;
+    }
 }
-
 
 .form-title {
     white-space: nowrap;
@@ -359,11 +358,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .history:hover {
     opacity: 0.7;
     transform: scale(1.05);
-}
 
-.history:hover>preview {
-    opacity: 0.7;
-    height: 205px;
 }
 
 .preview {
@@ -714,8 +709,20 @@ input[type="number"]::-webkit-outer-spin-button {
     align-items: center;
 }
 
-.center {
+.self-center {
     align-self: center;
+}
+
+.self-start {
+    align-self: flex-start;
+}
+
+.self-end {
+    align-self: flex-end;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .g-30 {
@@ -968,7 +975,7 @@ input[type="checkbox"] {
 
 .input_box {
     position: relative;
-    height: 50px;
+    min-height: 50px;
     min-width: 300px;
     z-index: 10;
 }
